--- a/src/components/about/BeliefsSection/beliefsSection.module.scss
+++ b/src/components/about/BeliefsSection/beliefsSection.module.scss
@@ -13,7 +13,9 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    margin: 0 auto;
+
+    padding-left: 5%;
+    padding-right: 5%;
     h1 {
       font-family: Integral CF;
       font-size: 64px;
@@ -21,19 +23,16 @@
       font-weight: 400;
       line-height: 64px;
       color: var(--main-text-color);
-      margin-bottom: 10%;
+      margin-bottom: 80px;
     }
     .cardsContainer {
       width: 100%;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: flex-start;
-      flex-wrap: wrap;
       gap: 100px;
-      padding: 0 16px;
       .card {
         width: 100%;
-        max-width: 285px;
         min-width: 150px;
         display: flex;
         flex-direction: column;
@@ -41,6 +40,7 @@
         align-items: flex-start;
         gap: 24px;
         .content {
+          padding: 0;
           h3 {
             font-family: Lexend;
             font-size: 24px;
@@ -64,6 +64,10 @@
           flex-direction: row;
           max-width: 100%;
         }
+      }
+      @media screen and (max-width: 700px) {
+        justify-content: flex-start;
+        flex-wrap: wrap;
       }
     }
 
