--- a/src/components/about/TeamSection/teamSection.module.scss
+++ b/src/components/about/TeamSection/teamSection.module.scss
@@ -14,6 +14,7 @@
   background-size: 50%;
   padding: 10% 16px;
   h1 {
+    z-index: 2;
     text-align: center;
     font-family: Integral CF;
     font-size: 88px;
@@ -83,8 +84,22 @@
     margin: 0 auto;
 
     .gridItem {
+      position: relative;
+      width: 100px;
+      height: 100px;
       margin-bottom: 20px;
       cursor: pointer;
+
+      @media screen and (min-width: 1441px) {
+        width: 200px;
+        height: 200px;
+      }
+    }
+    .overlay {
+      filter: grayscale(100%) brightness(150%);
+    }
+    .blur {
+      filter: grayscale(100%) blur(4px) opacity(50%);
     }
   }
 
